Archive2/ec/0493089623beee/output
main.cpp:3:24: warning: unused parameter 'a' [-Wunused-parameter]
    virtual void f(int a){}
                       ^
main.cpp:8:24: warning: unused parameter 'a' [-Wunused-parameter]
    virtual void f(int a){}
                       ^
main.cpp:12:3: error: too few arguments to function call, expected 1, have 0; did you mean 'B::f'?
a.f();
~~^
  B::f
main.cpp:4:18: note: 'B::f' declared here
    virtual void f(){}
                 ^
2 warnings and 1 error generated.
